Added data caching

--- a/animated/collapsible-tree.html
+++ b/animated/collapsible-tree.html
@@ -27,72 +27,65 @@ let tree = d3.tree;
 let hierarchy = d3.hierarchy;
 let select = d3.select;
 let data = {
-    "name": "portfolio",
+    "name": "Steven King",
     "children": [
         {
-            "name": "Cash",
+            "name": "Neena Kochhar",
             "children": [
                 {
-                    "name": "CHF"
+                    "name": "Hermann Baer"
                 },
                 {
-                    "name": "EUR"
+                    "name": "Shelley Higgins"
                 },
                 {
-                    "name": "USD"
-                }
-            ]
-        },
-        {
-            "name": "Fixed Income",
-            "children": [
-                {
-                    "name": "Sov and Corp Bonds"
-                },
-                {
-                    "name": "Em Mkts Bonds"
-                },
-                {
-                    "name": "High Yield Bonds"
-                }
-            ]
-        },
-        {
-            "name": "Equities",
-            "children": [
-                {
-                    "name": "Switzerland"
-                },
-                {
-                    "name": "Euroland"
-                },
-                {
-                    "name": "Japan"
-                },
-                {
-                    "name": "Australia"
-                },
-                {
-                    "name": "Emerging Markets"
-                }
-            ]
-        },
-        {
-            "name": "Alternative Investments",
-            "children": [
-                {
-                    "name": "Real Estate",
+                    "name": "Nancy Greenberg",
                     "children": [
                         {
-                            "name": "Eurozone"
+                            "name": "Ismael Sciarra"
+                        },
+                        {
+                            "name": "Jose Manuel Urman"
+                        },
+                        {
+                            "name": "Luis Popp"
                         }
                     ]
+                }
+            ]
+        },
+        {
+            "name": "Lex De Haan",
+            "children": [
+                {
+                    "name": "Alexander Hunold",
+                    "children": [
+                        {
+                            "name": "Bruce Ernst"
+                        },
+                        {
+                            "name": "Valli Pataballa"
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "name": "Den Raphaely",
+            "children": [
+                {
+                    "name": "Alexander Khoo"
                 },
                 {
-                    "name": "Hedge Funds"
-                },
+                    "name": "Shelli Baida"
+                }
+            ]
+        },
+        {
+            "name": "Adam Fripp",
+            "children": [
                 {
-                    "name": "Commodities"
+                    "name": "Laura Bissot"
                 }
             ]
         }
